--- a/octree/CMakeLists.txt
+++ b/octree/CMakeLists.txt
@@ -1,4 +1,8 @@
 add_executable(octree src/main.cpp)
 target_link_libraries(octree vk-bootstrap::vk-bootstrap Vulkan::Vulkan fmt::fmt glfw glm::glm)
 
+add_executable(trace src/trace.cpp)
+target_link_libraries(trace glm::glm)
+target_include_directories(trace PRIVATE ../ext/stb)
+
 add_subdirectory(tests)
