--- a/octree/CMakeLists.txt
+++ b/octree/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(IMGUI_DIR ../ext/imgui)
 
-add_executable(window src/main.cpp ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp ${IMGUI_DIR}/backends/imgui_impl_vulkan.cpp ${IMGUI_DIR}/imgui.cpp ${IMGUI_DIR}/imgui_draw.cpp ${IMGUI_DIR}/imgui_demo.cpp ${IMGUI_DIR}/imgui_tables.cpp ${IMGUI_DIR}/imgui_widgets.cpp)
+add_executable(window src/main.cpp src/math_helpers.cpp ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp ${IMGUI_DIR}/backends/imgui_impl_vulkan.cpp ${IMGUI_DIR}/imgui.cpp ${IMGUI_DIR}/imgui_draw.cpp ${IMGUI_DIR}/imgui_demo.cpp ${IMGUI_DIR}/imgui_tables.cpp ${IMGUI_DIR}/imgui_widgets.cpp)
 target_link_libraries(window vk-bootstrap::vk-bootstrap Vulkan::Vulkan fmt::fmt glfw glm::glm)
 target_include_directories(window PRIVATE ${IMGUI_DIR} ${IMGUI_DIR}/backends)
 
